kubernetes/apps/security/pocket-id/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    pod-security.kubernetes.io/enforce: privileged
