kubernetes/apps/security/pocket-id/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id-local
  namespace: pocket-id
spec:
  entryPoints: [web]
  routes:
    - match: Host(`id.${DOMAIN_LOCAL}`)
      kind: Rule
      services:
        - name: pocket-id
          port: 1411
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id-public
  namespace: pocket-id
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`id.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: pocket-id
          port: 1411
  tls: {}
